--- a/typescript-random-gmap-company/index.html
+++ b/typescript-random-gmap-company/index.html
@@ -1,5 +1,6 @@
 <html>
  <body>
+    <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUsjQY5ZTxtG28yT6cDozIZIcinEOt6nY"></script>
     <script  type="module" src="./src/index.ts"></script>
  </body>
 </html>
