--- a/typescript-web-framework/index.html
+++ b/typescript-web-framework/index.html
@@ -3,6 +3,6 @@
         <div id="root">
             <p>Hello!</p>
         </div>
-        <script src="./src/index.ts"></script>
+        <script type="module"  src="./src/index.ts"></script>
     </body>
 </html>
