feat: section13, lesson 199, add event binding and button click to UserForm

--- a/typescript-web-framework/index.html
+++ b/typescript-web-framework/index.html
@@ -1,8 +1,6 @@
 <html>
     <body>
-        <div id="root">
-            <p>Hello!</p>
-        </div>
+        <div id="root"></div>
         <script type="module"  src="./src/index.ts"></script>
     </body>
 </html>
